[tool.poetry]
name = "call-ai-agent"
version = "1.0.0"
description = "AI Call Assistant"
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
flask-cors = "^4.0.0"
twilio = "^8.10.0"
openai = "^0.28.1"
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
